# asesor-financiero-ia

./: .env.example  .gitignore  README.md  render.yaml  requirements-app.txt  requirements.txt  vercel.json
backend/: main.py
data/: README.md
deploy_backend/: pyproject.toml  requirements.txt
deploy_backend/backend/: main.py
deploy_backend/ml/: predictor.py  training_pipeline.py
docs/: articulo_cientifico_asesor_financiero_ia.docx  despliegue.md  entrega_final.md  entrega_final_asesor_financiero_ia.docx  jira_backlog.md  reporte_modelos.docx  reporte_modelos.xlsx
frontend/: streamlit_app.py
legacy/: streamlit_original.py
ml/: __init__.py  predictor.py  schema.py  statistical_validation.py  training_pipeline.py
models/: README.md  best_model.h5  best_model.keras  model_metadata.json  preprocessor.joblib
outputs/: class_distribution.csv  eda_summary.csv  fold_results.csv  hyperparameter_tuning.csv  model_comparison.csv  statistical_tests.csv
reports/: build_article_docx.py  build_delivery_docx.py  export_reports.py
vercel_frontend/: app.js  index.html  style.css
vercel_frontend/reports/: articulo_cientifico_asesor_financiero_ia.docx  entrega_final_asesor_financiero_ia.docx  reporte_modelos.docx  reporte_modelos.xlsx
