[project]
name = "asesor-financiero-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "python-dotenv==1.0.1",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "joblib==1.4.2",
  "scikit-learn==1.5.2"
]

[tool.vercel]
entrypoint = "backend.main:app"
